# git-gemini-clicker

./: .gitignore  README.md  config.py  pyproject.toml  reviewer_cli.py
git_reviewer/: ai_client.py  core.py  git_client.py  reviewer_cli.py  settings.py
git_reviewer/cli/: reviewer_cli.py
git_reviewer/clients/: ai_client.py  git_client.py
git_reviewer/prompts/: prompt_detail.md  prompt_release.md
