[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-gemini-clicker"
dynamic = ["version"]
description = "AI-driven code review CLI utilizing Google Gemini and Git diffs."
readme = "README.md"
authors = [
    {name = "shouni"},
]
license = "MIT"
requires-python = ">=3.9"
keywords = ["git", "gemini", "ai", "review", "cli", "click", "python", "LLM", "AI-driven", "code-review", "diff-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "click",
    "google-genai",
    "google-api-core",
    "GitPython",
]

[project.scripts]
ggc = "git_reviewer.cli.reviewer_cli:cli"

[tool.setuptools_scm]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = true
